--- a/gen.yaml
+++ b/gen.yaml
@@ -3,8 +3,17 @@ generation:
   sdkClassName: Formance
   singleTagPerOp: true
   telemetryEnabled: false
+features:
+  version: ""
+  go:
+    core: 2.86.4
+    deprecations: 2.81.1
+    globalSecurity: 2.81.1
+    globalServerURLs: 2.82.0
+    ignores: 2.81.1
+    unions: 2.81.2
 go:
-  version: v1.0.20230725
+  version: v1.0.20230915
   author: Formance
   maxMethodParams: 0
   packageName: github.com/formancehq/formance-sdk-go
