--- a/.github/workflows/speakeasy_sdk_generate.yml
+++ b/.github/workflows/speakeasy_sdk_generate.yml
@@ -1,26 +1,20 @@
 name: Generate
-
-on:
-  workflow_dispatch: # Allows manual triggering of the workflow to generate SDK
-    inputs:
-      force:
-        description: "Force generation of SDKs"
-        type: boolean
-        default: false
-  schedule:
-    - cron: 0 0 * * * # Runs every day at midnight
-
+"on":
+    workflow_dispatch:
+        inputs:
+            force:
+                description: Force generation of SDKs
+                type: boolean
+                default: false
+    schedule:
+        - cron: 0 0 * * *
 jobs:
-  generate:
-    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-generation.yaml@v14
-    with:
-      speakeasy_version: latest
-      openapi_docs: |
-        - https://github.com/formancehq/stack/releases/download/v2.0.17/generate.json
-      languages: |-
-        - go
-      mode: pr
-      force: ${{ github.event.inputs.force }}
-    secrets:
-      speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
-      github_access_token: ${{ secrets.GITHUB_TOKEN }}
+    generate:
+        uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
+        with:
+            force: ${{ github.event.inputs.force }}
+            mode: pr
+            speakeasy_version: latest
+        secrets:
+            github_access_token: ${{ secrets.GITHUB_TOKEN }}
+            speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
