--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -1,16 +1,12 @@
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-    my-source:
+    stacks-source:
         inputs:
-            - location: https://github.com/formancehq/stack/releases/download/v2.1.2/generate.json
+            - location: https://github.com/formancehq/stack/releases/download/v3.0.0-rc.1/generate.json
         registry:
-            location: registry.speakeasyapi.dev/formance/formance/my-source
+            location: registry.speakeasyapi.dev/formance/formance/stacks-source
 targets:
     formance-sdk-go:
         target: go
-        source: my-source
-        codeSamples:
-            registry:
-                location: registry.speakeasyapi.dev/formance/formance/my-source-code-samples
-            blocking: false
+        source: stacks-source
